# qtl

./: CMakeLists.txt
cmake/: TestForAutoKeyword.cmake  TestForAutoKeyword.cpp  TestForLambdaExpressions.cmake  TestForLambdaExpressions.cpp  TestForResultOfLambda.cmake  TestForResultOfLambda.cpp  qtl_config.cmake.h.in
include/: CMakeLists.txt
include/qtl/: CMakeLists.txt  all_query.hpp  any_query.hpp  boolean_query.hpp  distinct.hpp  empty_query.hpp  iterator.hpp  join.hpp  order_by.hpp  predicate.hpp  qtl.hpp  range.hpp  return_type.hpp  select.hpp  selector.hpp  sequence.hpp  sum.hpp  type_traits.hpp  where.hpp
test/: CMakeLists.txt  all_test.cpp  any_test.cpp  distinct_test.cpp  from_test.cpp  order_by_test.cpp  predicate_test.cpp  select_test.cpp  selector_test.cpp  sum_test.cpp  test.cpp  test_tools.hpp  where_test.cpp
